# auto_peeper

./: .env.example  .gitignore  Cargo.toml  readme.md
src/: main.rs
src/app/domain/: mod.rs
src/app/domain/bot/: mod.rs
src/app/domain/bot/bot_loop/: mod.rs
src/app/domain/bot/commands/: get_report_avg_price_by_model.rs  mod.rs  (+2 more)
src/app/domain/clients/: avito_client.rs  drom_client.rs  mod.rs  peer_client_enum.rs
src/app/domain/data_loader/: mod.rs
src/app/domain/models/: car.rs  car_repository.rs  cars_queue.rs  cars_queue_repository.rs  context.rs  context_repository.rs  drom_bull.rs  drom_bull_repository.rs  mod.rs  notification_member.rs  notification_member_repository.rs  progress.rs  progress_repository.rs  user_request.rs
src/app/domain/queue/: mod.rs
src/app/domain/support/: mod.rs
src/app/domain/time_loop/: mod.rs
src/app/domain/user_request_mapper/: mod.rs
src/bootstrap/: bootstrap.rs
src/config/: database.toml  logging.yaml  mod.rs  request_config.rs
src/db/: mod.rs
src/db/connection/: mod.rs  sqlite_connection_factory.rs
src/db/migrations/: m10_create_table_notification_members.rs  m11_add_link_field_to_cars.rs  m1_create_table_migrations.rs  m2_create_table_drom_bulls.rs  m3_rename_table_drom_bulls_to_cars.rs  m4_add_system_field_to_cars.rs  m5_add_exclusive_field_to_cars.rs  m6_fill_system_to_cars.rs  m7_create_table_progress.rs  m8_add_new_field_to_cars.rs  m9_create_table_cars_queue.rs  migration_checker.rs  migration_writer.rs  mod.rs
src/storage/requests/: requests.toml
storage/requests/: requests.toml
(+6 files in other folders)
