[package]
name = "auto_peeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.74"
scraper = "0.18.1"
chrono = "0.4.31"
